@@ -3,9 +3,9 @@ exec_prefix=@exec_prefix@
 libdir=@libdir@
 includedir=@includedir@
 
-Name: GStreamer
+Name: gnonlin
 Description: Non linear editing framework
-Requires: glib >= 1.2.0, gtk+ >= 1.2.0, libxml >= 1.8.1 libgst >= 0.2.1
+Requires: glib >= 2.2.0, libxml2 >= 2.4.9, gstreamer-0.8 >= @GST_REQ@
 Version: @VERSION@
 Libs: -L${libdir} -lgnl
-Cflags: -I${includedir} @GNL_DEFINE_CFLAGS@
+Cflags: -I${includedir} @GNL_CFLAGS@
