@@ -1,3 +1,7 @@
+2005-03-23  Edward Hervey  <bilboed@bilboed.com>
+
+	* gnonlin.pc.in: updated file to correct dependencies versions
+
 2005-03-22  Edward Hervey  <bilboed@bilboed.com>
 
 	* configure.ac, Makefile.am, docs/libs/Makefile.am, docs/Makefile.am: 
